[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "thor"
version = "0.1.4"
description = "Inference of celluar genomics by integrating spatial transcriptomics with histology images"
readme = "README.rst"
authors = [
  { name = "Pengzhi Zhang" },
]
maintainers = [
  { name = "Pengzhi Zhang", email = "pzhang@houstonmethodist.org" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy==1.25.*",
    "squidpy<=1.3.0",
    "dask<=2024.8.0",
    "scipy<1.11",
    "stardist>=0.8.3",
    "opencv-python",
    "networkx==2.8.*",
    "scikit-image<=0.20.0",
    "numba==0.58.1",
    "numexpr>=2.8.4",
    "qnorm>=0.8.1",
    "pandas<2.0",
    "tensorflow<=2.14",
    "keras<=2.14",
    "omnipath>=1.0.8",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
]
vis = [
    "plotly",
    "dash<=2.14.0",
    "seaborn",
]
analysis = [
    "decoupler==1.5.*",
    #"commot@git+https://github.com/biopzhang/COMMOT.git",
]
docs = [
    "ipython",
    "ipywidgets>=8.0.0",
    "sphinx>=5.3",
    "sphinx-autodoc-annotation",
    "sphinx_autopackagesummary",
    "sphinx-autodoc-typehints>=1.10.3",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex>=2.3.0",
    "sphinxcontrib-spelling>=7.6.2",
    "nbsphinx>=0.8.1",
    "myst-nb>=0.17.1",
    "sphinx_copybutton>=0.5.0",
    "pandoc",
]

[project.urls]
Homepage = ""
Documentation = ""
"Bug Tracker" = ""
Discussions = ""
Changelog = ""


